phase 1 release
