# src/modules/auth/auth.controller.ts
@@ -1,33 +1,21 @@
 import { AuthService } from './services/auth.service'
-import { SuccessResponseDto } from '~/common/success-response.dto'
 import {
-  SendEmailBodyDto,
-  SendEmailResponseDto,
   LoginBodyDto,
   LoginResponseDto,
   RegisterBodyDto,
   RegisterResponseDto,
-  VerifyEmailResponseDto,
-  ResetPasswordResponseDto,
-  ResetPasswordBodyDto,
-  VerifyEmailBodyDto,
   ChangePasswordResponseDto,
   ChangePasswordBodyDto
 } from './dto'
 import { PatchHandler, PostHandler } from '~/types/controller-handler.type'
 import { LogoutBodyDto, LogoutResponseDto } from './dto/logout.dto'
 import { RefreshTokenBodyDto, RefreshTokenResponseDto } from './dto/refresh-token.dto'
-import { EmailService } from './services/email.service'
-import { getForgotPasswordTemplate, getVerifyEmailTemplate } from '~/utils/email-templete'
 import { TokenPayload } from '~/types/token-payload.type'
 import { MESSAGES } from '~/constants/messages'
 import { HTTP_STATUS } from '~/constants/httpStatus'
 
 export class AuthController {
-  constructor(
-    private readonly authService: AuthService,
-    private readonly emailService: EmailService
-  ) {}
+  constructor(private readonly authService: AuthService) {}
   /* tương đương với
 
     constructor(authService: AuthService) {
@@ -66,61 +54,6 @@ export class AuthController {
       verify,
       exp
     })
-    res.json(result)
-  }
-
-  resendVerifyEmail: PostHandler<SendEmailBodyDto, SendEmailResponseDto> = async (req, res) => {
-    const { email } = req.body
-    const token = await this.authService.resendVerifyEmail(email)
-    // gửi link kèm email verify token để khi người dùng click vào link đó thì gọi đến api /verify-email
-    const html = getVerifyEmailTemplate(token)
-    const result = await this.emailService.sendEmail(
-      {
-        to: email,
-        subject: 'Xác nhận địa chỉ email của bạn',
-        html
-      },
-      MESSAGES.RESEND_VERIFY_EMAIL_SUCCESS
-    )
-    res.json(result)
-  }
-
-  forgotPassword: PostHandler<SendEmailBodyDto, SendEmailResponseDto> = async (req, res) => {
-    const { email } = req.body
-    const token = await this.authService.forgotPassword(email)
-    console.log(token)
-    // gửi link kèm email verify token để khi người dùng click vào link đó thì gọi đến api /verify-email
-    const html = getForgotPasswordTemplate(token)
-    const result = await this.emailService.sendEmail(
-      {
-        to: email,
-        subject: 'Xác nhận địa chỉ email của bạn',
-        html
-      },
-      MESSAGES.FORGOT_PASSWORD_SUCCESS
-    )
-    res.json(result)
-  }
-
-  verifyEmail: PostHandler<VerifyEmailBodyDto, VerifyEmailResponseDto> = async (req, res) => {
-    const { token } = req.body
-    const { user_id, verify } = req.decoded_email_verify_token as TokenPayload
-    const result = await this.authService.verifyEmail({
-      token,
-      user_id,
-      verify
-    })
-
-    res.json(result)
-  }
-
-  verifyForgotPasswordToken: PostHandler = async (req, res) => {
-    res.json(new SuccessResponseDto(HTTP_STATUS.OK, MESSAGES.VERIFY_FORGOT_PASSWORD_TOKEN_SUCCESS, null))
-  }
-
-  resetPassword: PostHandler<ResetPasswordBodyDto, ResetPasswordResponseDto> = async (req, res) => {
-    const { token, new_password } = req.body
-    const result = await this.authService.resetPassword({ token, new_password })
     res.json(result)
   }
 
